test/subjects/errors/break_more_than_allowed1.php
<?php

	break 3; // { Warning: Cannot break 3 levels }

?>
